	* i386.md (*mul*): FIx constraints; remove confused comment; fix 	athlon_decode attributes 	(imul/k8 optimization peep2s): New.

* athlon.md (athlon_ssecmp*): Handle ssecomi as well.
	* i386.md (type attribute): Add ssecomi.
	(unit, memory, prefix attributes): Handle ssecomi.
	(cvt?2? patterns): Fix athlon_decode attribute
	(comi patterns): Set attribute to ssecomi.

	PR target/8343
	* m68k.md (umulsidi, mulsidi expanders): Use register operand.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@61098 138bc75d-0d04-0410-961f-82ee72b054a4